# mimic

./: .gitignore  .travis.yml  COPYING  dependencies.sh  libttsmimic.pc.in  meson.build  meson_options.txt  run_testsuite.sh
include/: cst_builtin_plugins.h  cst_cg.h  cst_uregex.h  cst_val.h
lang/cmu_grapheme_lang/: cmu_grapheme_lang.h  cmu_grapheme_plugin.c
lang/cmu_indic_lang/: cmu_indic_lang.h  cmu_indic_plugin.c
lang/cmu_time_awb/: cmu_time_awb.c  cmu_time_awb.h
lang/cmu_us_awb/: cmu_us_awb.c  cmu_us_awb.h
lang/cmu_us_kal/: cmu_us_kal.c  cmu_us_kal.h
lang/cmu_us_kal16/: cmu_us_kal16.c  cmu_us_kal16.h
lang/cmu_us_rms/: cmu_us_rms.c  cmu_us_rms.h
lang/cmu_us_slt/: cmu_us_slt.c  cmu_us_slt.h
lang/cmu_us_slt_hts/: cmu_us_slt_hts.c  cmu_us_slt_hts.h
lang/cmulex/: make_cmulex  train_cmulex.py
lang/es_lang/: es_lang.h  es_plugin.c  es_text_analysis.c
lang/train_models/: build_lts.py  common.py  prune_lexicon.py  test_lts.py  train_lts.py  utils.py
lang/vid_gb_ap/: vid_gb_ap.c  vid_gb_ap.h
src/cg/: cst_cg.c  cst_cg_map.c  cst_cg_map.h
src/utils/: cst_builtin_plugins.c  cst_uregex.c  cst_val.c
